--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.19.1",
     "flubber": "^0.4.2",
     "framer-motion": "^10.2.4",
     "pixi.js": "^7.1.4",
